--- a/casal/index.html
+++ b/casal/index.html
@@ -30,8 +30,8 @@
     <link rel="canonical" href="https://gustavorameh.com.br/casal/">
     
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="../img/logo.png">
-    <link rel="apple-touch-icon" href="../img/logo.png">
+    <link rel="icon" type="image/png" href="../img/logonova.png">
+    <link rel="apple-touch-icon" href="../img/logonova.png">
     
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Poppins:wght@600;700&display=swap" rel="stylesheet">
@@ -46,8 +46,8 @@
         <div class="container mx-auto px-4 md:px-6 lg:px-8">
             <div class="flex justify-between items-center py-3 md:py-4">
                 <a href="../index.html" class="flex items-center gap-3 group">
-                    <img src="../img/logo.png" alt="Logo Gustavo Rameh - Psicólogo Clínico" class="h-10 md:h-12 lg:h-14 transition-transform group-hover:scale-105">
-                </a>
+                    <img src="../img/logonova.png" alt="Logo Gustavo Rameh - Psicólogo Clínico" class="w-20 h-16 md:w-24 md:h-20 lg:w-32 lg:h-28 transition-transform group-hover:scale-105" width="140" height="56" decoding="async">
+            </a>
             <nav class="hidden lg:flex items-center gap-4 xl:gap-5 font-medium text-primary text-sm xl:text-base">
                 <a href="../individual/" class="hover:text-secondary transition-colors">Terapia Individual</a>
                 <a href="index.html" class="text-secondary font-bold">Terapia de Casal</a>
