--- a/index.html
+++ b/index.html
@@ -885,7 +885,7 @@
             </div>
 
             <div class="border-t border-blue-800 pt-10 text-center text-sm text-blue-300">
-                <p>Copyright © 2024 Gustavo Rameh. Todos os direitos reservados.</p>
+                <p>Copyright © 2024 Gustavo Rameh.</p>
             </div>
         </div>
     </footer>
