--- a/index.html
+++ b/index.html
@@ -155,6 +155,10 @@
                         <span>Sobre</span>
                         <span class="absolute bottom-0 left-0 w-0 h-0.5 bg-secondary transition-all group-hover:w-full"></span>
                     </a>
+                    <a href="blog/" class="relative hover:text-secondary transition-colors py-2 px-1 group">
+                        <span>Blog</span>
+                        <span class="absolute bottom-0 left-0 w-0 h-0.5 bg-secondary transition-all group-hover:w-full"></span>
+                    </a>
                 </nav>
 
                 <!-- Desktop CTA Button -->
@@ -204,6 +208,9 @@
                     </a>
                     <a href="sobre/" class="px-4 py-2.5 hover:bg-blue-50 rounded-lg transition-colors text-primary hover:text-secondary font-medium text-sm">
                         <i class="fas fa-user mr-2"></i> Sobre
+                    </a>
+                    <a href="blog/" class="px-4 py-2.5 hover:bg-blue-50 rounded-lg transition-colors text-primary hover:text-secondary font-medium text-sm">
+                        <i class="fas fa-book-open mr-2"></i> Blog
                     </a>
                     <a href="https://wa.me/5532988178494" target="_blank"
                         class="mx-4 mt-2 bg-gradient-to-r from-secondary to-orange-600 text-white font-semibold text-sm py-2.5 px-5 rounded-full transition-all transform hover:scale-105 shadow-md flex items-center justify-center gap-2">
@@ -880,6 +887,8 @@
                                     class="fas fa-chevron-right text-xs text-secondary"></i> Atendimento Online</a></li>
                         <li><a href="sobre/" class="hover:text-secondary transition-colors flex items-center gap-2 text-sm md:text-base"><i
                                     class="fas fa-chevron-right text-xs text-secondary"></i> Sobre Mim</a></li>
+                        <li><a href="blog/" class="hover:text-secondary transition-colors flex items-center gap-2 text-sm md:text-base"><i
+                                    class="fas fa-chevron-right text-xs text-secondary"></i> Blog</a></li>
                     </ul>
                 </div>
             </div>
@@ -1269,7 +1278,7 @@
                         const formattedDate = formatDate(post.created_at);
                         const readTime = calculateReadTime(post.content);
                         const excerpt = post.excerpt || extractExcerpt(post.content, 120);
-                        const postUrl = getPostUrl(post, '/blog');
+                        const postUrl = `/blog/post.html?slug=${post.slug || post.id}`;
 
                 return `
                     <article class="bg-white rounded-2xl border border-gray-100 shadow-sm hover:shadow-lg transition-all duration-300 overflow-hidden group hover:-translate-y-1">
